# swh-loader-git

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CONTRIBUTORS  Cargo.toml  MANIFEST.in  Makefile  Makefile.local  Makefile.tests  PKG-INFO  README  README.md  README.org  README.rst  TODO.org  conftest.py  default.nix  mypy.ini  profile.py  pyproject.toml  pytest.ini  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  swh-loader-git_0.0.1.orig.tar.gz.delta  swh-loader-git_0.0.1.orig.tar.gz.id  swh-loader-git_0.0.10.orig.tar.gz.delta  swh-loader-git_0.0.10.orig.tar.gz.id  swh-loader-git_0.0.11.orig.tar.gz.delta  swh-loader-git_0.0.11.orig.tar.gz.id  swh-loader-git_0.0.12.orig.tar.gz.delta  swh-loader-git_0.0.12.orig.tar.gz.id  swh-loader-git_0.0.13.orig.tar.gz.delta  swh-loader-git_0.0.13.orig.tar.gz.id  swh-loader-git_0.0.14.orig.tar.gz.delta  (+212 more)
benchmarks/: README.md  bench_channel_bottleneck.py  bench_direct_tree.py  bench_dulwich_baseline.py  bench_fetch.py  bench_full_pipeline.py  bench_inflate.py  bench_large.py  bench_testbed_suite.py  run_testbed_suite.sh
debian/: changelog  control  rules
deploy/: HANDOFF-OPS.md  values-dulwich-fallback.yaml
doc/: api-backend-protocol.txt  git-loading-design.txt
docs/: Makefile  README.rst  cli.rst  index.rst  package-loader-tutorial.rst  vcs-loader-overview.rst
docs/attic/: api-backend-protocol.txt
gix-lib/: Cargo.toml
gix-lib/src/: fetch.rs  inflate.rs  lib.rs  objects.rs  traverse.rs
gix-py/: Cargo.toml
gix-py/src/: exceptions.rs  lib.rs
resources/: local-git-loader.ini  remote-git-loader.ini  remote-loader-git.ini
resources/test/: back.ini  db-manager.ini
scratch/: analyse-profile.py  db.py  futures.py  git_visit.py  http.py  profile-sgloader.py  profile-swhgitloader.py  repo_walk.py  retry-tryout.py  scratch-pickle.py  scratch-swh-api.py  test.py
sgloader/: __init__.py  db_utils.py  loader.py  models.py  sgloader.py
swh/: __init__.py  db.py  db_utils.py  file.py  hash.py  manager.py
swh.loader.git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swh/backend/: api.py  back.py  mapping.py
swh/client/: http.py
swh/conf/: reader.py
swh/data/: swhmap.py  swhrepo.py
swh/gitloader/: git.py  loader.py  local_store.py  models.py  remote_store.py  sgloader.py  storage.py  store.py  type.py
swh/http/: client.py
swh/loader/: __init__.py  cli.py  exception.py  loader.py  pytest_plugin.py
swh/loader/core/: converters.py  loader.py  tasks.py  utils.py
swh/loader/core/tests/: __init__.py  test_converters.py  test_loader.py  test_queue.py  test_storage.py  test_tests.py  test_utils.py
swh/loader/git/: __init__.py  _gix.py  _gix.pyi  base.py  converters.py  date.py  directory.py  dulwich_fallback.py  dumb.py  from_disk.py  git.py  loader.py  loader_dulwich.py  local_store.py  manager.py  pack.py  reader.py  remote_store.py  submodules.py  tar_out.py  tar_out_cli.py  tasks.py  updater.py  utils.py
swh/loader/git/backend/: api.py
swh/loader/git/client/: http.py
swh/loader/git/data/: swhrepo.py
swh/loader/git/gitloader/: git.py  loader.py  local_store.py  remote_store.py
swh/loader/git/protocols/: serial.py
swh/loader/git/retry/: policy.py
swh/loader/git/storage/: db.py  models.py  service.py  storage.py
swh/loader/git/store/: service.py
swh/loader/git/tests/: __init__.py  conftest.py  test_api_content.py  test_api_directory.py  test_api_home.py  test_api_occurrence.py  test_api_origin.py  test_api_person.py  test_api_post_per_type.py  test_api_release.py  test_api_revision.py  test_converters.py  test_date.py  test_directory.py  test_dulwich_fallback.py  test_dulwich_fallback_dispatch.py  test_from_disk.py  test_git_utils.py  test_gix.py  test_gix_exceptions.py  test_http.py  test_initdb.py  test_loader.py  test_local_loader.py  test_pack.py  test_remote_loader.py  test_safety_net.py  test_submodules.py  test_swhrepo.py  test_tar_out.py  test_tasks.py  test_tasks_directory.py  test_tasks_size_class.py  test_updater.py  test_utils.py
swh/loader/package/: __init__.py  archive.py  debian.py  deposit.py  gnu.py  loader.py  npm.py  pypi.py  storage.py  tasks.py  utils.py
swh/loader/package/archive/: __init__.py  loader.py  tasks.py
swh/loader/package/cran/: __init__.py  loader.py  tasks.py
swh/loader/package/debian/: __init__.py  loader.py  tasks.py
swh/loader/package/deposit/: __init__.py  loader.py  tasks.py
swh/loader/package/functional/: __init__.py  loader.py  tasks.py
swh/loader/package/nixguix/: __init__.py  loader.py  tasks.py
swh/loader/package/npm/: __init__.py  loader.py  tasks.py
swh/loader/package/opam/: __init__.py  loader.py  tasks.py
swh/loader/package/pypi/: __init__.py  loader.py  tasks.py
swh/loader/package/tests/: common.py  conftest.py  test_archive.py  test_common.py  test_conftest.py  test_debian.py  test_deposit.py  test_gnu.py  test_loader.py  test_loader_metadata.py  test_npm.py  test_pypi.py  test_tasks.py  test_utils.py
swh/loader/tests/: __init__.py  common.py  conftest.py  test_cli.py  test_common.py  test_converters.py  test_init.py  test_queue.py
swh/loader/vcs/: loader.py
swh/loader/vcs/tests/: test_converters.py  test_queue.py
swh/protocols/: serial.py
swh/retry/: policy.py
swh/storage/: db.py  fs.py  mapping.py  models.py  service.py  store.py
swh/store/: __init__.py  db.py  models.py  service.py  store.py
swh/tests/: test_api_content.py  test_api_directory.py  test_api_home.py  test_api_object.py  test_api_occurrence.py  test_api_origin.py  test_api_person.py  test_api_pickle.py  test_api_post_per_type.py  test_api_post_put_per_type.py  test_api_release.py  test_api_revision.py  test_backend.py  test_client.py  test_file.py  test_git_utils.py  test_hash.py  test_http.py  test_initdb.py  test_integration.py  test_loader.py  test_local_loader.py  test_origin.py  test_remote_loader.py  test_swhmap.py  test_swhrepo.py  test_utils.py
tests/: git_repo_creation.py  test_integration.py
(+79 files in other folders)
